Fixed team select issues, added styling, and set up mock settings api

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="edge" />
-    <!-- COMMON TAGS -->
+    <meta name="theme-color" content="#000000">
     <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&amp;family=Open+Sans:wght@400;700&amp;display=swap"
+        rel="stylesheet">
     <style>
         html,
         body,
