Added tooltip for Event Stream

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,20 @@
             height: 100%;
             overflow-x: hidden;
         }
+        .blaseballTooltip {
+            --spectrum-tooltip-tip-height: 0px;
+            --spectrum-tooltip-tip-width: 0px;
+            --spectrum-tooltip-text-color: #fff;
+            border: 1px solid #fff;
+            --spectrum-tooltip-background-color: #000;
+            max-width: 200px;
+            padding: 15px 0.5rem;
+            text-align: center;
+            border-radius: 0.25rem;
+            opacity: 0.9;
+            font-family: "Lora", "Courier New", monospace, serif;
+            font-size: 14px;
+        }
     </style>
 </head>
 
