--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
         // Used to tell the Paper Components we don't want to load this font
         window.polymerSkipLoadingFontRoboto = true;
     </script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&amp;family=Open+Sans:wght@400;700&amp;display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&amp;family=Open+Sans:wght@400;700&amp;display=swap"
+        media="print" onload="this.onload=null;this.removeAttribute('media');">
     <style>
         html,
         body,
